[package]
name = "ec2-by-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std-resolver = "^0.21"
aws-config = "^0.15"
aws-sdk-ec2 = "^0.15"
aws-types = "^0.15"
env_logger = "^0.9"
log = "^0.4"
futures = "^0.3"
getopts = "^0.2"
tokio = { version = "^1", features = ["full"] }
